# ClipWorks

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  dump.rdb
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20240704_initial_schema.py  44a116ed488e_add_render_job_logs.py  738d123a32a9_add_project_agent_state.py  e82569df0396_add_user_credits_and_plan.py
backend/app/: celery_app.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/agent/: __init__.py  asset_bind.py  composer.py  conversation.py  html_generator.py  llm.py  modifier.py  orchestrator.py  planner.py  prompts.py  session.py  tools.py
backend/app/agent/steps/: _base.py  (+7 more)
backend/app/rendering/: engine_selector.py  provider.py  qa.py  service.py
backend/app/routers/: agent.py  assets.py  auth.py  compositions.py  projects.py  renders.py
backend/app/services/: assets.py  audio_track.py  credits.py  media_proxy.py  scraper.py  stock_images.py  tts.py  url_safety.py
backend/app/tasks/: render_task.py
backend/tests/: conftest.py  test_agent.py  test_agent_router_wizard.py  test_agent_vibe.py  test_api.py  test_asset_bind.py  test_asset_naming.py  test_celery.py  test_html_assets.py  test_llm_json.py  test_qa_gate.py  test_render_integration.py  test_render_task.py  test_renderer_health.py  test_rich_plan.py  test_stock_images.py  test_storyboard.py  test_tts.py
backend/tests/agent/: test_html_generator.py  test_orchestrator.py  test_prompts.py  test_session.py  test_steps.py  test_tools.py
(+203 files in other folders)
