[project]
name = "clipworks-backend"
version = "0.1.0"
description = "ClipWorks backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
]
